[package]
name = "abridge"
version = "0.1.0"
authors = ["David Roundy <daveroundy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bridge-deck = { version = "0.1.1", path = "..", features = ["display-as"] }
bridge-solver = { version = "0.1.0", path = "../bridge-solver" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.0"
memorable-wordlist = "0.1.7"

warp = "0.3.0"
tokio = { version = "1.22.0", features = ["full", "time"] }
async-stream = "0.3.3"
futures = "0.3.25"
regex = "1.4.3"
axum = "0.6.1"
hyper = "0.14.23"
http = "0.2.8"
internment = "0.7.0"

display-as = { path = "../../display-as/display-as", version = "0.7.0", features = ["warp"] }