[package]
name = "abridge"
version = "0.1.0"
authors = ["David Roundy <daveroundy@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bridge-deck = { version = "0.1.1", path = "..", features = ["display-as"] }
robot = { version = "0.1.0", path = "../robot" }

serde_json = "1.0"
percent-encoding = "2.3.0"
rand = "0.8.0"
memorable-wordlist = "0.1.7"
lets-encrypt-warp = "0.3.0"
clap = { version = "4.4.3", features = ["derive"] }
warp = "0.3.0"
tokio = { version = "1.32.0", features = ["full", "time"] }
futures = "0.3.28"
axum = "0.6.1"
hyper = "0.14.23"
http = "0.2.8"
internment = "0.7.0"
dashmap = "5.5.3"

display-as = { version = "0.7.0", features = ["warp"] }

[profile.release]
lto = true