[package]
name = "robot"
version = "0.1.0"
authors = ["davidarch <david.arch@nextroll.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
bridge-deck = { version = "0.1.1", path = "..", features = ["display-as"] }
bridge-solver = { version = "0.1.0", path = "../bridge-solver" }
regex = "1.4.3"
display-as = { version = "0.7.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
